<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="cursive"
        android:shadowColor="@android:color/darker_gray"
        android:text="@string/heading"
        android:textColor="@color/black"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="cursive"
        android:text="@string/turn"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/grid"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/heading"
        app:layout_constraintVertical_bias="0.155"
        app:srcCompat="@drawable/grid" />

    <ImageView
        android:id="@+id/zero1"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="72dp"
        android:contentDescription="@string/one"
        android:onClick="@string/tap"
        android:tag="0"
        app:layout_constraintEnd_toStartOf="@+id/zero2"
        app:layout_constraintHorizontal_bias="0.555"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView4" />

    <ImageView
        android:id="@+id/zero2"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="24dp"
        android:contentDescription="@string/two"
        android:onClick="playerTap"
        android:tag="1"
        app:layout_constraintEnd_toStartOf="@+id/zero3"
        app:layout_constraintTop_toTopOf="@+id/imageView4" />

    <ImageView
        android:id="@+id/zero3"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="36dp"
        android:contentDescription="@string/three"
        android:onClick="playerTap"
        android:tag="2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView4" />

    <ImageView
        android:id="@+id/zero4"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/four"
        android:onClick="playerTap"
        android:tag="3"
        app:layout_constraintStart_toStartOf="@+id/imageView4"
        app:layout_constraintTop_toBottomOf="@+id/zero1" />

    <ImageView
        android:id="@+id/zero5"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/five"
        android:onClick="playerTap"
        android:tag="4"
        app:layout_constraintEnd_toStartOf="@+id/zero6"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toEndOf="@+id/zero4"
        app:layout_constraintTop_toBottomOf="@+id/zero2" />

    <ImageView
        android:id="@+id/zero6"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="36dp"
        android:contentDescription="@string/six"
        android:onClick="playerTap"
        android:tag="5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/zero3" />

    <ImageView
        android:id="@+id/zero7"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="16dp"
        android:contentDescription="@string/seven"
        android:onClick="playerTap"
        android:tag="6"
        app:layout_constraintBottom_toBottomOf="@+id/imageView4"
        app:layout_constraintEnd_toStartOf="@+id/zero8"
        app:layout_constraintHorizontal_bias="0.386"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/zero4"
        app:layout_constraintVertical_bias="0.235" />

    <ImageView
        android:id="@+id/zero8"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginEnd="24dp"
        android:contentDescription="@string/eight"
        android:onClick="playerTap"
        android:tag="7"
        app:layout_constraintBottom_toBottomOf="@+id/imageView4"
        app:layout_constraintEnd_toStartOf="@+id/zero9"
        app:layout_constraintTop_toBottomOf="@+id/zero5"
        app:layout_constraintVertical_bias="0.197" />

    <ImageView
        android:id="@+id/zero9"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginEnd="36dp"
        android:contentDescription="@string/nine"
        android:onClick="playerTap"
        android:tag="8"
        app:layout_constraintBottom_toBottomOf="@+id/imageView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/zero6"
        app:layout_constraintVertical_bias="0.235" />

</androidx.constraintlayout.widget.ConstraintLayout>